small tweaks and added airbnb project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     show.
                     I'm a big motorsports guy as well.
                 </p>
-                <p>I'm currently working on completing my bachelor's degree in computer multimedia at ITS Comtrade in
+                <p>I have a Bachelor's degree in Computer Multimedia at ITS Comtrade in
                     Belgrade.
                 </p>
 
@@ -142,40 +142,6 @@
             <div class="project-content">
 
                 <div class="project-text">
-                    <h3>Company Landing Page</h3>
-                    <p>This is a real company landing page I cloned to further improve my CSS skills.</p>
-
-                    <p>While it does have Javascript functionality for some elements, I mainly focused on HTML and CSS.
-                    </p>
-
-                    <div class="project-icons-2">
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
-                    </div>
-
-                    <a class="view-code-2" href="https://sad-nightingale-c14c07.netlify.app/" target="_blank">View <i
-                            class="fa fa-eye" aria-hidden="true"></i></a>
-                </div>
-
-                <div class="wow fadeInUp project-img">
-                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/screenshot4.png"
-                            alt=""></a>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="project project-3">
-            <div class="project-content">
-
-                <div class="wow fadeInUp project-img">
-                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/Screenshot (4).png"
-                            alt=""></a>
-                </div>
-
-                <div class="project-text">
                     <h3>React Movie App</h3>
                     <p>This is my first bigger project I built with React.</p>
 
@@ -195,6 +161,70 @@
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
+                <div class="wow fadeInUp project-img">
+                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/Screenshot (4).png"
+                            alt=""></a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="project project-3">
+            <div class="project-content">
+
+                <div class="wow fadeInUp project-img">
+                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/screenshot4.png"
+                            alt=""></a>
+                </div>
+
+                <div class="project-text">
+                    <h3>Company Landing Page</h3>
+                    <p>This is a real company landing page I cloned to further improve my CSS skills.</p>
+
+                    <p>While it does have Javascript functionality for some elements, I mainly focused on HTML and CSS.
+                    </p>
+
+                    <div class="project-icons-3">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                    </div>
+
+                    <a class="view-code-3" href="https://sad-nightingale-c14c07.netlify.app/" target="_blank">View <i
+                            class="fa fa-eye" aria-hidden="true"></i></a>
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+
+
+        <div class="project project-2">
+            <div class="project-content">
+
+                <div class="project-text">
+                    <h3>Airbnb Landing Page</h3>
+                    <p>Airbnb Landing Page clone built with Tailwind CSS.</p>
+
+                    <p>I built this app to practice Tailwind CSS. It was built only with HTML and with Tailwind CSS
+                        utility classes.</p>
+
+                    <div class="project-icons-2">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                    </div>
+
+                    <a class="view-code-2" href="https://github.com/lukson33/airbnb-tailwind" target="_blank">Code <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
+                </div>
+
+                <div class="wow fadeInUp project-img">
+                    <a href="#" target="_blank"><img src="img/airbnb.png" alt=""></a>
+                </div>
 
             </div>
 
@@ -206,7 +236,7 @@
         <div class="icon-container">
             <a class="icon" href="https://github.com/lukson33" target="_blank"><i class="fa fa-github"
                     aria-hidden="true"></i></a>
-            <a class="icon" href="https://www.linkedin.com/in/luka-gojkovic-028775140/" target="_blank"><i
+            <a class="icon" href="https://www.linkedin.com/in/luka-gojkovi%C4%87-b4a1b11b1/" target="_blank"><i
                     class="fa fa-linkedin" aria-hidden="true"></i></a>
             <a class="icon" href="mailto:luka.gojkovic33@gmail.com?Subject=Hello%20again"><i class="fa fa-envelope-o"
                     aria-hidden="true"></i></a>
