added new project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 child, and
                 I'm excited to make this my life's work.</p>
             <p class="fade">Down below are some of my projects.</p>
-            <!-- <p class="fade">Alternatively, you can download my <span><a class="header-btn" href="">résumé</a></span> -->
+            <p class="fade">Alternatively, you can download my <span><a class="header-btn"
+                        href="cv.pdf">résumé</a></span>
             </p>
 
             <span><a class="header-btn fade" href="https://github.com/lukson33" target="_blank">GitHub<i
@@ -92,6 +93,7 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>SASS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Vue JS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
                     </div>
                 </div>
@@ -112,8 +114,7 @@
         <div class="project project-1">
             <div class="project-content">
                 <div class="project-img wow fadeInUp">
-                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/Screenshot (6).png"
-                            alt=""></a>
+                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/cornelius.jpg" alt=""></a>
                 </div>
 
                 <div class="project-text">
@@ -162,7 +163,7 @@
                 </div>
 
                 <div class="wow fadeInUp project-img">
-                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/Screenshot (4).png"
+                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/react-movie.png"
                             alt=""></a>
                 </div>
 
@@ -174,9 +175,38 @@
             <div class="project-content">
 
                 <div class="wow fadeInUp project-img">
-                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/screenshot4.png"
-                            alt=""></a>
+                    <a href="https://shake-it-4b792.web.app/#/" target="_blank"><img src="img/shake-it.png" alt=""></a>
                 </div>
+
+                <div class="project-text">
+                    <h3>Shake It</h3>
+                    <p>An application I built with Vue JS and Firebase.</p>
+
+                    <p>It's an app that stores real data from Firebase database, and allows user to store his shake
+                        recipes, as well as add new ones, edit them and delete them.</p>
+
+                    <div class="project-icons-2">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Vue JS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Firebase</p>
+                    </div>
+
+                    <a class="view-code-2" href="https://shake-it-4b792.web.app/#/" target="_blank">View <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
+                    <a class="view-code-2" href="https://github.com/lukson33/shake-it" target="_blank">Code <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="project project-2">
+            <div class="project-content">
 
                 <div class="project-text">
                     <h3>Company Landing Page</h3>
@@ -195,39 +225,12 @@
                             class="fa fa-eye" aria-hidden="true"></i></a>
                 </div>
 
-
-
-            </div>
-
-        </div>
-
-
-
-        <div class="project project-2">
-            <div class="project-content">
-
-                <div class="project-text">
-                    <h3>Airbnb Landing Page</h3>
-                    <p>Airbnb Landing Page clone built with Tailwind CSS.</p>
-
-                    <p>I built this app to practice Tailwind CSS. It was built only with HTML and with Tailwind CSS
-                        utility classes.</p>
-
-                    <div class="project-icons-2">
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
-                    </div>
-
-                    <a class="view-code-2" href="https://github.com/lukson33/airbnb-tailwind" target="_blank">Code <i
-                            class="fa fa-code" aria-hidden="true"></i></a>
-                </div>
-
                 <div class="wow fadeInUp project-img">
-                    <a href="#" target="_blank"><img src="img/airbnb.png" alt=""></a>
+                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/overcast.png"
+                            alt=""></a>
                 </div>
 
             </div>
-
         </div>
     </section>
 
