--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <h3>Shake It</h3>
                     <p>An application I built with Vue JS and Firebase.</p>
 
-                    <p>It's an app that stores real data from Firebase database, and allows user to store his shake
+                    <p>It's an app that stores real data from Firebase, and allows user to store his shake
                         recipes, as well as add new ones, edit them and delete them.</p>
 
                     <div class="project-icons-2">
