--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 child, and
                 I'm excited to make this my life's work.</p>
             <p class="fade">Down below are some of my projects.</p>
-            <p class="fade">Alternatively, you can download my <span><a class="header-btn"
+            <p class="fade">Alternatively, you can download my <span><a class="header-btn resume"
                         href="cv.pdf">résumé</a></span>
             </p>
 
