added another project

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>SASS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>Vue JS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
                     </div>
                 </div>
@@ -175,28 +174,28 @@
             <div class="project-content">
 
                 <div class="wow fadeInUp project-img">
-                    <a href="https://shake-it-4b792.web.app/#/" target="_blank"><img src="img/shake-it.png" alt=""></a>
+                    <a href="https://focused-mayer-06e014.netlify.app/" target="_blank"><img src="img/bookmark-lp.png"
+                            alt=""></a>
                 </div>
 
                 <div class="project-text">
-                    <h3>Shake It</h3>
-                    <p>An application I built with Vue JS and Firebase.</p>
+                    <h3>Bookmark LP</h3>
+                    <p>Landing page I build as a challenge from Frontendmentor.io</p>
 
-                    <p>It's an app that stores real data from Firebase, and allows user to store his shake
-                        recipes, as well as add new ones, edit them and delete them.</p>
+                    <p>It's a landing page with a relatively minimalistic, clean design. I used BEM methodology along
+                        with SASS and Javascript for the tabbed features section and the FAQ accordion.</p>
 
-                    <div class="project-icons-2">
+                    <div class="project-icons-3">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>SASS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>BEM</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>Vue JS</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>Firebase</p>
                     </div>
 
-                    <a class="view-code-2" href="https://shake-it-4b792.web.app/#/" target="_blank">View <i
+                    <a class="view-code-3" href="https://focused-mayer-06e014.netlify.app/" target="_blank">View <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                    <a class="view-code-2" href="https://github.com/lukson33/shake-it" target="_blank">Code <i
-                            class="fa fa-code" aria-hidden="true"></i></a>
+                    <a class="view-code-3" href="https://github.com/lukson33/bookmark-lp/tree/main/css"
+                        target="_blank">Code <i class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -231,6 +230,38 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="project project-3">
+            <div class="project-content">
+
+                <div class="wow fadeInUp project-img">
+                    <a href="https://shake-it-4b792.web.app/#/" target="_blank"><img src="img/shake-it.png" alt=""></a>
+                </div>
+
+                <div class="project-text">
+                    <h3>Shake It</h3>
+                    <p>An application I built with Vue JS and Firebase.</p>
+
+                    <p>It's an app that stores real data from Firebase, and allows user to store his shake
+                        recipes, as well as add new ones, edit them and delete them.</p>
+
+                    <div class="project-icons-3">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Vue JS</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Firebase</p>
+                    </div>
+
+                    <a class="view-code-3" href="https://shake-it-4b792.web.app/#/" target="_blank">View <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
+                    <a class="view-code-3" href="https://github.com/lukson33/shake-it" target="_blank">Code <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+
         </div>
     </section>
 
