added updated CV and small tweaks

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <p>Tools / Design</p>
                     <div class="project-icons-0">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>Git / Github</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>BEM</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>Photoshop</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>Illustrator</p>
                     </div>
