--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 
                     <a class="view-code-3" href="https://focused-mayer-06e014.netlify.app/" target="_blank">View <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                    <a class="view-code-3" href="https://github.com/lukson33/bookmark-lp/tree/main/css"
-                        target="_blank">Code <i class="fa fa-code" aria-hidden="true"></i></a>
+                    <a class="view-code-3" href="https://github.com/lukson33/bookmark-lp" target="_blank">Code <i
+                            class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
             </div>
