--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     I'm a big motorsports guy as well.
                 </p>
                 <p>I have a Bachelor's degree in Computer Multimedia at ITS Comtrade in
-                    Belgrade. Currently I'm on an internship at LINK Group as a Web Designer.
+                    Belgrade.
                 </p>
 
                 <div class="about-skills">
