--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 child, and
                 I'm excited to make this my life's work.</p>
             <p class="fade">Down below are some of my projects.</p>
-            <p class="fade">Alternatively, you can download my <span><a class="header-btn resume"
-                        href="cv.pdf">résumé</a></span>
+            <p class="fade">Alternatively, you can download my <span><a target="_blank" rel="noopener noreferrer"
+                        class="header-btn resume" href="cv.pdf">résumé</a></span>
             </p>
 
             <span><a class="header-btn fade" href="https://github.com/lukson33" target="_blank">GitHub<i
