added new project

--- a/index.html
+++ b/index.html
@@ -175,27 +175,27 @@
             <div class="project-content">
 
                 <div class="wow fadeInUp project-img">
-                    <a href="https://focused-mayer-06e014.netlify.app/" target="_blank"><img src="img/bookmark-lp.png"
+                    <a href="https://world-countries-two.vercel.app/" target="_blank"><img src="img/world-countries.png"
                             alt=""></a>
                 </div>
 
                 <div class="project-text">
-                    <h3>Bookmark LP</h3>
-                    <p>Landing page I build as a challenge from Frontendmentor.io</p>
+                    <h3>World Countries</h3>
+                    <p>World Countries application I built with React, Next.js and Rest Countries API.</p>
 
-                    <p>It's a landing page with a relatively minimalistic, clean design. I used BEM methodology along
-                        with SASS and Javascript for the tabbed features section and the FAQ accordion.</p>
+                    <p>This application gets all of the countries of the world from an API. User can filter the
+                        countries by name, population and a few other options. Clicking on a specific country, user gets
+                        details of that country. Application has a toggle for dark mode as well.</p>
 
                     <div class="project-icons-3">
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>SASS</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>BEM</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>Next.js</p>
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                     </div>
 
-                    <a class="view-code-3" href="https://focused-mayer-06e014.netlify.app/" target="_blank">View <i
+                    <a class="view-code-3" href="https://world-countries-two.vercel.app/" target="_blank">View <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                    <a class="view-code-3" href="https://github.com/lukson33/bookmark-lp" target="_blank">Code <i
+                    <a class="view-code-3" href="https://github.com/lukson33/world-countries" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
