column layout in projects section

--- a/index.html
+++ b/index.html
@@ -111,10 +111,13 @@
 
     <section id="projects">
 
-        <div class="project project-1">
-            <div class="project-content">
-                <div class="project-img wow fadeInUp">
-                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/cornelius.jpg" alt=""></a>
+        <h2>Projects</h2>
+
+        <div class="project">
+            <div class="project-content wow fadeInUp">
+                <div class="project-img">
+                    <a href="https://cornelius-cylinder.com" target="_blank"><img src="img/thumbnails/cornelius.jpg"
+                            alt=""></a>
                 </div>
 
                 <div class="project-text">
@@ -132,15 +135,17 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
                     </div>
 
-                    <a class="view-code-1" href="https://cornelius-cylinder.com" target="_blank">View <i
-                            class="fa fa-eye" aria-hidden="true"></i></a>
+                    <a class="view-code" href="https://cornelius-cylinder.com" target="_blank">View <i class="fa fa-eye"
+                            aria-hidden="true"></i></a>
                 </div>
 
             </div>
-        </div>
 
-        <div class="project project-2">
-            <div class="project-content">
+            <div class="project-content wow fadeInUp" data-wow-delay="0.2s">
+                <div class=" project-img">
+                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img
+                            src="img/thumbnails/movie-app.png" alt=""></a>
+                </div>
 
                 <div class="project-text">
                     <h3>React Movie App</h3>
@@ -149,34 +154,29 @@
                     <p>The app uses MovieDB API to fetch all the data. The user can see Most Popular, Upcoming and Top
                         Rated movies, as well as search for a specific movie and get more info about it.</p>
 
-                    <div class="project-icons-2">
+                    <div class="project-icons-1">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
                     </div>
 
-                    <a class="view-code-2" href="https://nifty-morse-e42fec.netlify.com" target="_blank">View <i
+                    <a class="view-code" href="https://nifty-morse-e42fec.netlify.com" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
-                    <a class="view-code-2" href="https://github.com/lukson33/movie-app" target="_blank">Code <i
+                    <a class="view-code" href="https://github.com/lukson33/movie-app" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                </div>
-
-                <div class="wow fadeInUp project-img">
-                    <a href="https://nifty-morse-e42fec.netlify.com" target="_blank"><img src="img/react-movie.png"
-                            alt=""></a>
                 </div>
 
             </div>
 
         </div>
 
-        <div class="project project-3">
-            <div class="project-content">
+        <div class="project">
+            <div class="project-content wow fadeInUp">
 
                 <div class="wow fadeInUp project-img">
-                    <a href="https://world-countries-two.vercel.app/" target="_blank"><img src="img/world-countries.png"
-                            alt=""></a>
+                    <a href="https://world-countries-two.vercel.app/" target="_blank"><img
+                            src="img/thumbnails/world-countries.png" alt=""></a>
                 </div>
 
                 <div class="project-text">
@@ -187,26 +187,25 @@
                         countries by name, population and a few other options. Clicking on a specific country, user gets
                         details of that country. Application has a toggle for dark mode as well.</p>
 
-                    <div class="project-icons-3">
+                    <div class="project-icons-1">
+                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>React</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>Next.js</p>
-                        <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                     </div>
 
-                    <a class="view-code-3" href="https://world-countries-two.vercel.app/" target="_blank">View <i
+                    <a class="view-code" href="https://world-countries-two.vercel.app/" target="_blank">View <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                    <a class="view-code-3" href="https://github.com/lukson33/world-countries" target="_blank">Code <i
+                    <a class="view-code" href="https://github.com/lukson33/world-countries" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
             </div>
 
-        </div>
-
-
-
-        <div class="project project-2">
-            <div class="project-content">
+            <div class="project-content wow fadeInUp" data-wow-delay="0.2s">
+                <div class="project-img">
+                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img
+                            src="img/thumbnails/landing-page.png" alt=""></a>
+                </div>
 
                 <div class="project-text">
                     <h3>Company Landing Page</h3>
@@ -215,25 +214,19 @@
                     <p>While it does have Javascript functionality for some elements, I mainly focused on HTML and CSS.
                     </p>
 
-                    <div class="project-icons-3">
+                    <div class="project-icons-1">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
                     </div>
 
-                    <a class="view-code-3" href="https://sad-nightingale-c14c07.netlify.app/" target="_blank">View <i
+                    <a class="view-code" href="https://sad-nightingale-c14c07.netlify.app/" target="_blank">View <i
                             class="fa fa-eye" aria-hidden="true"></i></a>
                 </div>
-
-                <div class="wow fadeInUp project-img">
-                    <a href="https://sad-nightingale-c14c07.netlify.app/" target="_blank"><img src="img/overcast.png"
-                            alt=""></a>
-                </div>
-
             </div>
         </div>
 
-        <div class="project project-3">
+        <!-- <div class="project">
             <div class="project-content">
 
                 <div class="wow fadeInUp project-img">
@@ -247,7 +240,7 @@
                     <p>It's an app that stores real data from Firebase, and allows user to store his shake
                         recipes, as well as add new ones, edit them and delete them.</p>
 
-                    <div class="project-icons-3">
+                    <div class="project-icons-1">
                         <p><i class="fa fa-circle" aria-hidden="true"></i>HTML</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>CSS</p>
                         <p><i class="fa fa-circle" aria-hidden="true"></i>JavaScript</p>
@@ -255,15 +248,14 @@
                         <p><i class="fa fa-circle" aria-hidden="true"></i>Firebase</p>
                     </div>
 
-                    <a class="view-code-3" href="https://shake-it-4b792.web.app/#/" target="_blank">View <i
+                    <a class="view-code" href="https://shake-it-4b792.web.app/#/" target="_blank">View <i
                             class="fa fa-code" aria-hidden="true"></i></a>
-                    <a class="view-code-3" href="https://github.com/lukson33/shake-it" target="_blank">Code <i
+                    <a class="view-code" href="https://github.com/lukson33/shake-it" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
 
             </div>
-
-        </div>
+        </div> -->
     </section>
 
     <footer id="contact">
