--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     </div>
 
                     <a class="view-code" href="https://world-countries-two.vercel.app/" target="_blank">View <i
-                            class="fa fa-code" aria-hidden="true"></i></a>
+                            class="fa fa-eye" aria-hidden="true"></i></a>
                     <a class="view-code" href="https://github.com/lukson33/world-countries" target="_blank">Code <i
                             class="fa fa-code" aria-hidden="true"></i></a>
                 </div>
