added delay to project and added updated cv

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             </div>
 
-            <div class="project-content wow fadeInUp">
+            <div class="project-content wow fadeInUp" data-wow-delay="0.2s">
 
                 <div class="wow fadeInUp project-img">
                     <a href="https://world-countries-two.vercel.app/" target="_blank"><img
